correct the Redfield equation, add printing output, add other nuclei

--- a/relaxation_times/deutherium/RelaxationTimes.ipynb
+++ b/relaxation_times/deutherium/RelaxationTimes.ipynb
@@ -22,6 +22,8 @@
     "#gyromagnetic ratios for further developmant\n",
     "# !!! NOTICE!!!\n",
     "#values taken from matlab code and projecct work and slightly different than those in Wikipedia\n",
+    "#these values are also in the external file --> if change is needed; has to be changed there\n",
+    "#values here in jupyter just for the information and verify, why they are different\n",
     "#!!! NOTICE END !!!\n",
     "gammaD=41.695*10**6; #r*s^(-1)*T^(-1)\n",
     "gammaH=267.513*10**6;\n",
@@ -31,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,14 +44,17 @@
     "N_exp_to_fit=100 # number of exponential functions to be fitted\n",
     "analyze=1/10 # the proportin of correlation data to be used for fitting, ex. 1/2 uses first half of the data\n",
     "magnetic_field=2.35 # 5.99 # 8.49 T (values used in SDS paper, J.Chem. Soc.,, Faraday Trans. 1, 1988, 84(12), 4475-4486)\n",
+    "nuclei=\"2H\" #nuclei to calculate: 2H-deutherium; 13C - carbon; 15N - nitrogen \n",
     "take_all_in_folder=\"yes\" #analyze all in folder? useful for proteins, if no, fill the following line, if yes fill the folder path\n",
     "input_corr_file=\"alphaCF.xvg\"\n",
-    "folder_path=\"cor_times/\""
+    "folder_path=\"cor_times/\"\n",
+    "output_name=\"SDS_micelle.out\"\n",
+    "author_name=\"Ricky Nencini\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -68,17 +73,36 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "R1: 4378383.385872112 R2: 4453876.378260027\n"
+      "R1: 25.01542775459506 R2: 25.45977419741332 NOE: 0\n"
      ]
     }
    ],
    "source": [
+    "rt.initilize_output(OP,smallest_corr_time, biggest_corr_time, N_exp_to_fit,analyze,magnetic_field,input_corr_file,nuclei,output_name,author_name)\n",
     "if take_all_in_folder==\"yes\":\n",
     "    for file in os.listdir(folder_path):\n",
     "        input_corr_file = folder_path+os.fsdecode(file)\n",
-    "    rt.GetRelaxationData(OP,smallest_corr_time, biggest_corr_time, N_exp_to_fit,analyze,magnetic_field,input_corr_file)\n",
+    "    rt.GetRelaxationData(OP,smallest_corr_time, biggest_corr_time, N_exp_to_fit,analyze,magnetic_field,input_corr_file,nuclei,output_name)\n",
     "else:\n",
-    "    rt.GetRelaxationData(OP,smallest_corr_time, biggest_corr_time, N_exp_to_fit,analyze,magnetic_field,input_corr_file)"
+    "    rt.GetRelaxationData(OP,smallest_corr_time, biggest_corr_time, N_exp_to_fit,analyze,magnetic_field,input_corr_file,nuclei,output_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2021-10-19\n"
+     ]
+    }
+   ],
+   "source": [
+    "from datetime import date\n",
+    "print(date.today())"
    ]
   },
   {
