Update equations for N and C nuclei

--- a/relaxation_times/deutherium/RelaxationTimes.ipynb
+++ b/relaxation_times/deutherium/RelaxationTimes.ipynb
@@ -9,7 +9,7 @@
     "\"\"\"Jupyter Notebook for relaxation time analysis\"\"\"\n",
     "#The main analysis parts adapted from script by  H. Antila, with help from S. Ollila and T. Ferreira\n",
     "#saved in relaxation_times.py\n",
-    "# Last modified by R. Nencini, 15.10.2021\n",
+    "# Last modified by R. Nencini, 19.10.2021\n",
     "\n",
     "import sys\n",
     "import numpy as np\n",
@@ -41,7 +41,7 @@
     "OP=0 # order parameter\n",
     "smallest_corr_time=0 # enter in log scale -3 fs; 0 ps; 3 ns; 6 us;\n",
     "biggest_corr_time=6 # same as above\n",
-    "N_exp_to_fit=100 # number of exponential functions to be fitted\n",
+    "N_exp_to_fit=100 # number of exponential functions to be fitted between the samlles and biggest corr time\n",
     "analyze=1/10 # the proportin of correlation data to be used for fitting, ex. 1/2 uses first half of the data\n",
     "magnetic_field=2.35 # 5.99 # 8.49 T (values used in SDS paper, J.Chem. Soc.,, Faraday Trans. 1, 1988, 84(12), 4475-4486)\n",
     "nuclei=\"2H\" #nuclei to calculate: 2H-deutherium; 13C - carbon; 15N - nitrogen \n",
@@ -78,31 +78,34 @@
     }
    ],
    "source": [
+    "\"\"\"Execute the code - this part needs not be modified\"\"\"\n",
     "rt.initilize_output(OP,smallest_corr_time, biggest_corr_time, N_exp_to_fit,analyze,magnetic_field,input_corr_file,nuclei,output_name,author_name)\n",
     "if take_all_in_folder==\"yes\":\n",
     "    for file in os.listdir(folder_path):\n",
     "        input_corr_file = folder_path+os.fsdecode(file)\n",
-    "    rt.GetRelaxationData(OP,smallest_corr_time, biggest_corr_time, N_exp_to_fit,analyze,magnetic_field,input_corr_file,nuclei,output_name)\n",
+    "        rt.GetRelaxationData(OP,smallest_corr_time, biggest_corr_time, N_exp_to_fit,analyze,magnetic_field,input_corr_file,nuclei,output_name)\n",
     "else:\n",
     "    rt.GetRelaxationData(OP,smallest_corr_time, biggest_corr_time, N_exp_to_fit,analyze,magnetic_field,input_corr_file,nuclei,output_name)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2021-10-19\n"
-     ]
+     "data": {
+      "text/plain": [
+       "0.1"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "from datetime import date\n",
-    "print(date.today())"
+    "10**-1"
    ]
   },
   {
