--- a/relaxation_times/deutherium/README
+++ b/relaxation_times/deutherium/README
@@ -8,3 +8,7 @@ Works for 2H, 13C and 15N nuclei.
 
 No corrections to water viscosity are present.
 No plateau forcing.
+
+
+
+"SDS_micelle.out" is an example of the output file 
