--- a/relaxation_times/RelaxationTimes.ipynb
+++ b/relaxation_times/RelaxationTimes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,8 +45,14 @@
     "analyze=1/10 # the proportin of correlation data to be used for fitting, ex. 1/2 uses first half of the data\n",
     "magnetic_field=2.35 # 5.99 # 8.49 T (values used in SDS paper, J.Chem. Soc.,, Faraday Trans. 1, 1988, 84(12), 4475-4486)\n",
     "nuclei=\"2H\" #nuclei to calculate: 2H-deutherium; 13C - carbon; 15N - nitrogen \n",
-    "take_all_in_folder=\"yes\" #analyze all in folder? useful for proteins, if no, fill the following line, if yes fill the folder path\n",
+    "\n",
+    "##############3\n",
+    "## CHANGE IN THE CODE 6.4.2022, not going throught the whole content of the folder anymore\n",
+    "###############\n",
+    "take_all_in_folder=\"number\" #\"yes\"/\"no\"/\"number\" analyze all in folder? useful for proteins, if no, fill the following line, if yes fill the folder path\n",
     "input_corr_file=\"alphaCF.xvg\"\n",
+    "residues=24 # number of AA in a peptine, for take_all_in_folder=\"number\"\n",
+    "input_prefix=\"\" # mostly for peptides, works with take_all_in_folder=\"no\"\n",
     "folder_path=\"cor_times/\"\n",
     "output_name=\"SDS_micelle.out\"\n",
     "author_name=\"Ricky Nencini\""
@@ -96,16 +102,75 @@
     "    for file in os.listdir(folder_path):\n",
     "        input_corr_file = folder_path+os.fsdecode(file)\n",
     "        rt.GetRelaxationData(OP,smallest_corr_time, biggest_corr_time, N_exp_to_fit,analyze,magnetic_field,input_corr_file,nuclei,output_name)\n",
+    "elif take_all_in_folder==\"yes\":\n",
+    "    for i in range(0,residues+1):\n",
+    "        input_corr_file = folder_path+input_prefix+\"_\"+i+\".xvg\"\n",
+    "        rt.GetRelaxationData(OP,smallest_corr_time, biggest_corr_time, N_exp_to_fit,analyze,magnetic_field,input_corr_file,nuclei,output_name)\n",
+    "    \n",
     "else:\n",
     "    rt.GetRelaxationData(OP,smallest_corr_time, biggest_corr_time, N_exp_to_fit,analyze,magnetic_field,input_corr_file,nuclei,output_name)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['/home/ricky/Documents/from_work/NMR_FF_tools/relaxation_times',\n",
+       " '',\n",
+       " '/home/ricky/programs/amber18/lib/python2.7/site-packages',\n",
+       " '/home/ricky/programs/amber18/lib/python2.7/site-packages/ParmEd-3.2.0-py2.7-linux-x86_64.egg',\n",
+       " '/home/ricky/programs/amber18/lib/python2.7/site-packages/pytraj-2.0.5-py2.7-linux-x86_64.egg',\n",
+       " '/home/ricky/programs/amber18/lib/python2.7/site-packages/pdb4amber-1.7.dev0-py2.7.egg',\n",
+       " '/home/ricky/anaconda3/lib/python37.zip',\n",
+       " '/home/ricky/anaconda3/lib/python3.7',\n",
+       " '/home/ricky/anaconda3/lib/python3.7/lib-dynload',\n",
+       " '/home/ricky/anaconda3/lib/python3.7/site-packages',\n",
+       " '/home/ricky/anaconda3/lib/python3.7/site-packages/IPython/extensions',\n",
+       " '/home/ricky/.ipython']"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sys.path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['',\n",
+       " '/home/ricky/programs/amber18/lib/python2.7/site-packages',\n",
+       " '/home/ricky/programs/amber18/lib/python2.7/site-packages/ParmEd-3.2.0-py2.7-linux-x86_64.egg',\n",
+       " '/home/ricky/programs/amber18/lib/python2.7/site-packages/pytraj-2.0.5-py2.7-linux-x86_64.egg',\n",
+       " '/home/ricky/programs/amber18/lib/python2.7/site-packages/pdb4amber-1.7.dev0-py2.7.egg',\n",
+       " '/home/ricky/anaconda3/envs/all3/lib/python36.zip',\n",
+       " '/home/ricky/anaconda3/envs/all3/lib/python3.6',\n",
+       " '/home/ricky/anaconda3/envs/all3/lib/python3.6/lib-dynload',\n",
+       " '/home/ricky/anaconda3/envs/all3/lib/python3.6/site-packages',\n",
+       " '/home/ricky/anaconda3/envs/all3/lib/python3.6/site-packages/IPython/extensions',\n",
+       " '/home/ricky/.ipython']"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sys.path"
+   ]
   },
   {
    "cell_type": "code",
@@ -117,9 +182,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "all",
+   "display_name": "relax",
    "language": "python",
-   "name": "all"
+   "name": "relax"
   },
   "language_info": {
    "codemirror_mode": {
@@ -131,7 +196,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
