--- a/relaxation_times/RelaxationTimes.ipynb
+++ b/relaxation_times/RelaxationTimes.ipynb
@@ -348,7 +348,7 @@
     "output_name=\"hMff_45SDS_s\" # serves as a prefix for yaml output files\n",
     "                           # if None and README_correl.yaml exists, xtc file name is used\n",
     "                           #delete the '=None' in the last argument of rt.analyze_all_in_folder(...,output_name=None)\n",
-    "                           # if you with for the name here to be used\n",
+    "                           # if you wish for the name here to be used\n",
     "                           # otherwise uses the name of the xtc file, if README_correl.yaml exists\n",
     "                           # README_correl.yaml exists if correlation functions were \n",
     "                           # calculated by this script\n",
