fix bug in calculation of correlation functions without README.yaml

--- a/relaxation_times/RelaxationTimes.ipynb
+++ b/relaxation_times/RelaxationTimes.ipynb
@@ -12,7 +12,7 @@
     "<h3>2. Removal of water from xtc, tpr, gro for faster analysis </h3>\n",
     "In manage_files.py, last modified: 17.2.2023 - add an extra option to create tpr file without water, new gromacs works strangly\n",
     "<h3>3. Correlation function calculations</h3>\n",
-    "In relaxation_times.py, last modified: 17.2.2023 - fix bug in the first option for CF calculations\n",
+    "In relaxation_times.py, last modified: 15.6.2023 - fix bug in the calculation correlation functions without README.yaml\n",
     "<h3>4. Average over correlation functions</h3>\n",
     "In relaxation_times.py, last modified: 17.2.2023\n",
     "<h3>5. Spin relaxation times calculations</h3>\n",
